tests/behavior/error/int_divide_by_zero_u64.bz
function main()
{
	let a = 1u64;
	let b = 0u64;
	let _ = a / b;
}
